# semantic_loss

./: .gitignore  README.md  class_mapping.py  datasets.py  dispatch_job.sh  execute_jobs.sh  generate_experiments.py  setup.cfg  setup.py  symbolic.py  train.py  train_synthetic.py  utils.py  wideresnet.py
notebooks/: cifar100_experiment.ipynb  craigs_constraints.ipynb  mnist_experiment.ipynb  nf_simple_s_loss.ipynb  nf_with_complex_data_constraints_and_categorical_variables.ipynb  synthetic.ipynb  synthetic_experiment.ipynb
scripts/: cifar100_experiments.txt  dispatch_job.sh  execute_jobs.sh  generate_experiments.py  mnist_experiments.txt  rc_experiment.py  rc_experiment_mixture_vae.py  rc_experiment_vae.py  run_image_experiments.py  run_mnist_experiment.py  run_synthetic_data_experiments.py  semi_supervised_flows.py  semi_supervised_vae.py  synthetic_experiments.txt
src/: __init__.py  baseline_model.py  create_network_data.py  data_loader.py  dispatch_job.sh  execute_jobs.sh  generate_experiments.py  generative_trainer.py  main_experiment_avoid.py  main_semi_supervised.py  main_vae_categorical.py
src/experiment/: class_mapping.py  constrainedwideresnet.py  datasets.py  experiments.py  generate_experiments.py  generative.py  image_experiments.py  mnist_experiment.py  synthetic_experiments.py  wideresnet.py
src/nflib/: README.md  __init__.py  data.py  flows.py  gumbel_softmax.py  nets.py  spline_flows.py  utils.py
src/nflib/datasets/: README.md  mnist.py
src/robotic_constraints/: dataloader.py  main_experiment_avoid.py  main_vae_experiment_avoid.py  robotic_constraints_flow.py  robotic_constraints_mixture_vae.py  robotic_constraints_trainer.py  robotic_constraints_vae.py  utils.py
src/robotic_constraints/util/: shell_util.py
src/rss_code_and_data/: __init__.py
src/rss_code_and_data/code/: __init__.py
src/semi_supervised/: datasets.py  semi_supervised_flow.py  semi_supervised_m2.py  semi_supervised_m2_gumbel_smax.py  semi_supervised_trainer.py  semi_supervised_vae.py
src/symbolic/: symbolic.py  train.py  utils.py
src/utils/: data.py  generative_trainer.py  logging.py  logging_utils.py
src/vaelib/: pytorch_categorical_flow.py  pytorch_categorical_vae.py  resnet.py  vae.py
