[metadata]
name = semantic-loss
version = 0.0.1
license = MIT
license_files = LICENSE
url = https://github.com/NickHoernle/semantic_loss
author = Nick Hoernle
author_email = me@nickhoernle.com
keywords = generative_models logic
description = Adding discrete data structures to VAEs and flows for semi-supervised learning and logic constraints.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: MIT
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
install_requires =
    black
    fire
    ipython
    numpy
    matplotlib
    pandas
    pylint
    pytest
    scipy
    torch
    torchvision
    tqdm
setup_requires =
    pytest-runner
tests_require =
    pytest
packages = find:
package_dir =
    =src
scripts =
    scripts/rc_experiment.py
    scripts/rc_experiment_vae.py
    scripts/rc_experiment_mixture_vae.py
    scripts/semi_supervised_flows.py
    scripts/semi_supervised_vae.py

[options.extras_require]
dev =
    twine

[options.packages.find]
where = src

[bdist_wheel]
universal = 0

[aliases]
test = pytest

[tool:pytest]
testpaths = tests
pythonfiles = test_*.py