[metadata]
name = neurosymbolic_study
version = 0.0.1
license = MIT
license_files = LICENSE
url = https://github.com/NickHoernle/semantic_loss
author = Nick Hoernle
author_email = me@nickhoernle.com
keywords = neurosymbolic_learning generative_models constraint_learning
description = Accepts user specified symbolic constraints for enforcing domain knowledge on the output of a network
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: MIT
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
install_requires =
    black
    fire
    gitpython
    ipython
    numpy
    matplotlib
    pandas
    pylint
    pytest
    scipy
    torch
    torchvision
    tqdm
setup_requires =
    pytest-runner
tests_require =
    pytest
packages = find:
package_dir =
    =src
scripts =
    scripts/run_image_experiments.py
    scripts/run_synthetic_data_experiments.py
    scripts/run_mnist_experiment.py

[options.extras_require]
dev =
    twine

[options.packages.find]
where = src

[bdist_wheel]
universal = 0

[aliases]
test = pytest

[tool:pytest]
testpaths = tests
pythonfiles = test_*.py